# Komando

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  instructions.md  release.toml  roadmap.md  setup_hooks.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
scripts/: install.sh  release.sh  setup_embeddings.sh  setup_hooks.sh
src/: db.rs  main.rs  ops.rs
