[package]
name = "komando"
version = "0.1.1"
edition = "2021"
description = "A command line utility to better organize and keep track of your commands."
license = "MIT"
repository = "https://github.com/Vellyxenya/Komando"
build = "build.rs"

[dependencies]
clap = "4.0"
dirs = "5.0"
crossterm = "0.28.1"
serde = { version = "1.0.214", features = ["derive"] }
chrono = "0.4.38"
anyhow = "1.0.92"
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0.132"

[[bin]]
name = "komando_exec"
path = "src/main.rs"