[package]
name = "komando"
version = "1.0.0-alpha.3"
edition = "2021"
description = "A command line utility to better organize and keep track of your commands."
license = "MIT"
repository = "https://github.com/Vellyxenya/Komando"
build = "build.rs"

[dependencies]
clap = "4.0"
dirs = "5.0"
crossterm = "0.28.1"
serde = { version = "1.0.214", features = ["derive"] }
chrono = "0.4.38"
anyhow = "1.0.92"
uuid = { version = "1.11", features = ["v4"] }
serde_json = "1.0.132"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sqlite-vec = { version = "0.1.6", optional = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"], optional = true }
fastembed = { version = "5.11.0", default-features = false, features = ["online"], optional = true }

[features]
default = []
embeddings = ["sqlite-vec", "ort", "fastembed"]

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "komando_exec"
path = "src/main.rs"
